adicionado favicon, estilizado logo e alterado nome da variavel de cor cinza

--- a/src/css/globais.css
+++ b/src/css/globais.css
@@ -9,7 +9,7 @@ html {
   }
   
   body {
-    background-color: var(--cor-fundo-cinza-escuro);
+    background-color: var(--cor-fundo-principal);
     font-family: var(--fonte-primaria);
     font-size: var(--fonte-normal);
   }
@@ -81,7 +81,7 @@ html {
     font-size: var(--fonte-grande);
     padding: 10px 20px;
     border-radius: 20px;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
     background-color: var(--cor-primaria);
   }
   
