--- a/src/css/secoes/header.css
+++ b/src/css/secoes/header.css
@@ -7,7 +7,10 @@
     font-size: var(--fonte-extra-grande);
     color: var(--cor-branca);
     border: 2px solid var(--cor-branca);
-    border-radius: 50%;
+    /* border-radius: 50%; */
+    border-top-left-radius: 35%;
+    border-bottom-right-radius: 35%;
+
     width: 65px;
     height: 65px;
     line-height: 55px;
