--- a/src/css/secoes/projetos.css
+++ b/src/css/secoes/projetos.css
@@ -40,7 +40,7 @@
     width: 100%;
     height: 100%;
     opacity: 0;    
-    transition: all .3s ease;
+    transition: all 0.3s ease;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
@@ -58,8 +58,6 @@
     opacity: 0.7;
     background-color: var(--cor-fundo-escuro);
     width: 100%;
-    padding-left: 20px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding: 10px 0 10px 20px;
     bottom: 0;
 }
