--- a/src/css/secoes/footer.css
+++ b/src/css/secoes/footer.css
@@ -16,3 +16,37 @@
     letter-spacing: 2px;
     margin-bottom: 20px;
 }
+
+.footer nav {
+    margin: 50px 0;
+}
+
+.footer nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* max-width: 320px; */
+    margin: 0 auto;
+}
+
+.footer nav ul li a {
+    font-weight: 500;
+    font-size: 2rem;
+    margin: 20px;
+    transition: 0.3s;
+}
+
+.footer nav ul li a:hover {
+    font-weight: 700;
+    color: var(--cor-primaria);
+}
+
+@media (max-width: 495px) {
+    .footer nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    }
+}
