adicionado o media ate 330px

--- a/src/css/secoes/sobre.css
+++ b/src/css/secoes/sobre.css
@@ -59,3 +59,9 @@
         max-width: 100%;                   
     }
 }
+
+@media (max-width: 330px) {
+     .botoes .botao {
+        font-size: 1.5rem;
+    }
+}
