--- a/src/css/variaveis.css
+++ b/src/css/variaveis.css
@@ -4,7 +4,8 @@
     --cor-branca: #fff;
     --cor-fundo-escuro: #040203;    
     --cor-fundo-principal: hsl(255, 21%, 11%);
-    --cor-fundo-cinza-claro: #353535;    
+    --cor-fundo-cinza-claro: #353535; 
+    --cor-borda-header: #988BA7   
   }
     
   :root {
