estilização no botao do CV

--- a/src/css/secoes/sobre.css
+++ b/src/css/secoes/sobre.css
@@ -31,6 +31,10 @@
     margin-bottom: 20px;
 }
 
+.botao {
+    border-radius: 20px 0;
+}
+
 @media(max-width: 1280px) { 
     .sobre-mim .row{
         justify-content: center;
