--- a/src/css/secoes/header.css
+++ b/src/css/secoes/header.css
@@ -38,7 +38,7 @@
 }
 
 .header nav ul li a:hover{
-    background-color: var(--cor-primaria);;
+    background-color: var(--cor-primaria);
     color: var(--cor-branca);
 }
 
