corrigido erro de sintaxe

--- a/src/css/variaveis.css
+++ b/src/css/variaveis.css
@@ -5,7 +5,7 @@
     --cor-fundo-escuro: #040203;    
     --cor-fundo-principal: hsl(255, 21%, 11%);
     --cor-fundo-cinza-claro: #353535; 
-    --cor-borda-header: #988BA7   
+    --cor-borda-header: #988BA7;   
   }
     
   :root {
